# numagents

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLI_GUIDE.md  COMPLETE_SYSTEM_SUMMARY.md  CONTRIBUTING.md  Makefile  README.md  WHATS_MISSING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: univers_catalog.yaml
docs/: core_improvements.md  development_guide.md  infospocketflow.md  knowledge_layer_guide.md  monitoring_guide.md  structure_agent_ia_guide.md
examples/: knowledge_layer_demo.py  monitoring_demo.py  morphic_layer_demo.py  security_layer_demo.py  state_layer_demo.py  structure_agent_ia_demo.py  tool_layer_demo.py
examples/complete_agent/: README.md  intelligent_agent.py
examples/web_ui/: README.md  app.py
examples/web_ui/templates/: dashboard.html
num_agents/: __init__.py  cli.py  cli_enhanced.py  core.py  exceptions.py  logging_config.py  serialization.py
num_agents/composer/: composer.py
num_agents/modules/: __init__.py  knowledge_layer.py  monitoring.py  morphic_layer.py  resilience.py  security_layer.py  state_layer.py  structure_agent_ia.py  tool_layer.py
num_agents/orchestrator/: meta_orchestrator.py
num_agents/univers/: univers_catalog_loader.py
num_agents/utils/: file_io.py
tests/: test_core_improvements.py  test_knowledge_layer.py  test_monitoring.py  test_morphic_layer.py  test_security_layer.py  test_serialization.py  test_state_layer.py  test_structure_agent_ia.py  test_tool_layer.py
